# vertical-puzzle

./: README.md
cli/: CMakeLists.txt  cli.cpp  cli.h  main.cpp
core/: constraint.cpp  constraint.h  parsers.cpp  parsers.h  placeholder.cpp  placeholder.h  solver.cpp  solver.h  utils.cpp  utils.h
gui/: colorlut.cpp  colorlut.h  gui.pro  inputgrid.cpp  inputgrid.h  inputitemdelegate.cpp  inputitemdelegate.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  tile.cpp  tile.h
samples/: 1.txt  2.txt  3.txt  4.txt  5.txt
